--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
+    "echarts": "^5.4.0",
+    "element-ui": "^2.15.8",
+    "jsonwebtoken": "^8.5.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "vue": "^2.6.14",
+    "vue-count-to": "^1.0.13",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
